--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ attrs = "^22.2.0"
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
 mypy = "^1.1.1"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
