--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ attrs = "^22.2.0"
 black = "^23.1.0"
 mypy = "^1.1.1"
 pytest = "^7.2.2"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
